# CCTV

./: .gitignore  CLAUDE.md  LICENSE  README.md  WORKLOG.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  DATA-SOURCES.md  HOOKS.md  RELEASING.md  ROADMAP.md
hooks/: session-env.sh  settings.snippet.json
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  focus.rs  hooks.rs  i18n.rs  jobs.rs  macos.rs  main.rs  refresh.rs  server.rs  state.rs  transcript.rs  tray.rs
src/components/: InstanceRow.tsx  MonitorWindow.tsx
src/i18n/: ca.ts  de.ts  en.ts  es.ts  fr.ts  index.ts  it.ts  pt.ts  ru.ts
src/lib/: ipc.ts
