[package]
name = "claude-code-monitor"
version = "0.1.0"
description = "Monitor de instancias de Claude Code"
authors = ["Manel"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
axum = "0.7"
sys-locale = "0.3"
# Watcher de ficheros del supervisor (Fuente A — docs/DATA-SOURCES.md).
notify = "6"
# Resolucion del directorio home para ~/.claude/jobs/.
dirs = "5"

tauri-plugin-autostart = "2"
