[package]
name = "cctv"
version = "0.1.0"
description = "Monitor de instancias de Claude Code"
authors = ["Manel"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
axum = "0.7"
sys-locale = "0.3"
# Supervisor file watcher (Source A — docs/DATA-SOURCES.md).
notify = "6"
# Home directory resolution for ~/.claude/jobs/.
dirs = "5"

tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"

[dev-dependencies]
# Used in transcript.rs unit tests to create temporary .jsonl fixture files.
tempfile = "3"

# NSPanel plugin: converts the monitor window into an NSPanel subclass so it
# can float above fullscreen spaces. Plain NSWindow + FullScreenAuxiliary +
# high level was empirically proven insufficient on macOS (window disappears
# when another app enters fullscreen even with collectionBehavior 0x101 and
# level 101 correctly applied). NSPanel subclass is required.
[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
